[tool.poetry]
name = "xyks-bro"
version = "0.1.0"
description = ""
authors = ["cyan <contact@cyans.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
frida = "^16.5.6"
typer = "^0.12.5"
rich = "^13.9.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
